--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "build": "npm run build",
+    "build": "npm run build"
   },
   "author": "Darya Enina",
   "license": "ISC",
